--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ article {
 }
 .card {
     border: 1px solid white;
-    width: 250px;
+    width: 90%;
     padding: 20px ;
     border-radius: 7px;
     color: hsla(0, 0%, 100%, 1);
@@ -73,7 +73,8 @@ article {
     border-top: 5px solid  hsl(180, 62%, 55%);
 }
 #image {
-    padding-left: 150px;
+    display: flex;
+    justify-self: end;
     
     
 }
